--- a/3 MESES.html
+++ b/3 MESES.html
@@ -44,7 +44,6 @@
     porque cada instante contigo es el más especial no sabes las ganas que tengo de abrazarte darte un beso y por fin demostrar que la distancia nunca fue ni será un obstáculo para nosotros dos.<br>
     ¡Eres lo mejor que me ha pasado y quiero que nuestro amor nunca termine!</p>
 
-    <img src="https://drive.google.com/uc?export=view&id=1ARExh1YVfu7mjdbQ_U8I7VDdmMNqzt_0" alt="Foto especial" class="photo">
-
+<img src="AMOR.jpg" alt="Foto especial" class="photo">
 </body>
 </html>
